[package]
name = "ding_push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["rt", "net", "process", "fs", "time", "io-util"]}
hyper = {version = "0.14", features = ["http1", "runtime", "server", "stream"]}
mlua = {version = "0.7.1", features = ["lua54", "async", "macros"]}
log = "0.4"
